--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -1,5 +1,24 @@
 @import 'variables';
 
+@mixin media($size) {
+    @media screen and (max-width: $size) {
+        @content;
+    }
+}
+
+@mixin size($a,$b: $a) {
+    width: $a;
+    height: $b;
+  }
+  
+  @mixin center() {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%);
+  }
+
+
 @mixin container {
     width: 100%;
     margin: 0 auto;
